bad/mul_invalid_types_void_bool.example_compiler_output
ERROR
[1mbad/mul_invalid_types_void_bool.lat:5:8: [1;31merror: [0;1mmultiplication is defined only for int values, not `void` and `boolean`[m
	foo() * true;
	      [1;32m^[m
